- Added a dark theme to the entire website - Changed colors of text for readablilty - Changed box shadow to be bolder - Fixed random overflow-x scrolling on home page - Added "under construction" for the Calendar and Need directions part

--- a/src/app/exec-card/exec-card.component.scss
+++ b/src/app/exec-card/exec-card.component.scss
@@ -1,5 +1,6 @@
 mdb-card-body {
   padding-top: 0;
+  margin-top: 15px;
 }
 
 hr {
@@ -9,6 +10,7 @@ hr {
 img {
   width: 400px;
   margin: 0 auto;
+  padding-top: 15px;
 }
 
 @media screen and (max-width: 1023px) {
