--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,35 @@
+html, body {
+  overflow-x: hidden !important;
+}
+
+
+a, li, p, h2, h3, h4, h5, h1 {
+  color: white !important;
+  font-weight: 400;
+}
+
+.card, .card-content, .list-group li {
+  background-color: #212121;
+}
+
+.card {
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 1.00), 0 2px 10px 0 rgba(0, 0, 0, 1.00);
+}
+
+app-calendar {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .carousel-indicators li {
-  background-color: aqua !important;
+  background-color: grey !important;
   bottom: -50px !important;
   opacity: 0.5;
 }
 
 .carousel-indicators li.active {
-  background-color: aqua !important;
+  background-color: white !important;
   opacity: 1;
 }
 
